--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     /* Header */
     header {
-      background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)), url('https://github.com/celvinzaky/portofolio/blob/Energi/gambar%20truk%20tambang.jpg') center/cover no-repeat;
+      background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)), url('gambar-truk-tambang.jpg') center/cover no-repeat;
       color: #fff;
       height: 100vh;
       display: flex;
