--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <div class="ops-grid" role="list">
           <!-- Card 1 -->
           <div class="op-card" role="listitem">
-            <img src="https://images.unsplash.com/photo-1597009357982-fcd8f48c3c53?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=" alt="Copper mine">
+            <img src="gambar-truk-tambang.jpg" alt="Copper mine">
             <div class="op-meta"><span>Mine Ownership: 39.6%</span><span>DRC</span></div>
             <div class="op-title">Kamoa-Kakula Copper Complex</div>
             <div style="color:var(--muted);font-size:14px;margin-bottom:12px">One of the world's highest-grade copper mines with low emissions intensity.</div>
@@ -247,7 +247,7 @@
 
           <!-- Card 2 -->
           <div class="op-card">
-            <img src="https://images.unsplash.com/photo-1604072366599-5f83cf38e7f5?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=" alt="oil rig">
+            <img src="wim-van-t-einde-1bTHs268h2Q-unsplash.jpg" alt="oil rig">
             <div class="op-meta"><span>Ownership: 62%</span><span>Zinc/DRC</span></div>
             <div class="op-title">Kipushi Zinc Mine</div>
             <div style="color:var(--muted);font-size:14px;margin-bottom:12px">Historic high-grade zinc and associated metals, returned to production with modern techniques.</div>
@@ -259,7 +259,7 @@
 
           <!-- Card 3 -->
           <div class="op-card">
-            <img src="https://images.unsplash.com/photo-1581090700227-4c4eb2c83d44?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=" alt="mining site">
+            <img src="boom-bucket-ed9HcUgZORI-unsplash.jpg" alt="mining site">
             <div class="op-meta"><span>Ownership: 64%</span><span>South Africa</span></div>
             <div class="op-title">Platreef PGM-Nickel Mine</div>
             <div style="color:var(--muted);font-size:14px;margin-bottom:12px">Large-scale precious metals and nickel project with long-life potential.</div>
@@ -271,7 +271,7 @@
 
           <!-- Card 4 -->
           <div class="op-card">
-            <img src="https://images.unsplash.com/photo-1620048283349-5f3d06c938c2?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=" alt="solar farm">
+            <img src="team-kiesel-mzEAjV141Ds-unsplash.jpg" alt="solar farm">
             <div class="op-meta"><span>Regional Exploration</span><span>Exploration</span></div>
             <div class="op-title">Western Forelands Copper Exploration</div>
             <div style="color:var(--muted);font-size:14px;margin-bottom:12px">Extensive exploration with multiple discoveries across the forelands region.</div>
