--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       height:100vh;display:flex;align-items:center;justify-content:center;padding-top:72px;
       background:
         linear-gradient(180deg, rgba(3,7,18,0.58), rgba(3,7,18,0.58)),
-        url('https://images.unsplash.com/photo-1508873535684-277a3cbcc3f6?q=80&w=1800&auto=format&fit=crop&ixlib=rb-4.0.3&s=') center/cover no-repeat;
+        url('20300376-hd_1920_1080_60fps.mp4') center/cover no-repeat;
       color:#fff;text-align:center;
     }
     .hero .wrap{max-width:980px;margin:0 auto;padding:40px 20px}
@@ -144,9 +144,9 @@
   <header class="topbar" role="banner">
     <div class="container nav-inner" style="display:flex;align-items:center;justify-content:space-between">
       <div class="brand" style="gap:10px">
-        <div class="logo-spot">IM</div>
+        <div class="logo-spot">ME</div>
         <div style="line-height:1">
-          <div style="font-weight:800">Ivanhoe<span style="color:var(--accent)">Demo</span></div>
+          <div style="font-weight:800"><span style="color:var(--accent)">MINEnergi</span></div>
           <div style="font-size:12px;color:#d1dadd">Mining with purpose</div>
         </div>
       </div>
