--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Ivanhoe Inspired — Global Mining (Demo)</title>
+  <title>Min Energy — Global Mining</title>
   <meta name="description" content="Demo single-page company profile for a mining corporation — operations, sustainability, news, investors, contact.">
   <style>
     /* ========== RESET & BASE ========== */
@@ -146,7 +146,7 @@
       <div class="brand" style="gap:10px">
         <div class="logo-spot">ME</div>
         <div style="line-height:1">
-          <div style="font-weight:800"><span style="color:var(--accent)">MINEnergi</span></div>
+          <div style="font-weight:800"><span style="color:var(--accent)">MINEnergy</span></div>
           <div style="font-size:12px;color:#d1dadd">Mining with purpose</div>
         </div>
       </div>
