--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       height:100vh;display:flex;align-items:center;justify-content:center;padding-top:72px;
       background:
         linear-gradient(180deg, rgba(3,7,18,0.58), rgba(3,7,18,0.58)),
-        url('20300376-hd_1920_1080_60fps.mp4') center/cover no-repeat;
+        url('emmanuel-appiah-ZapR-VS8qvk-unsplash.jpg') center/cover no-repeat;
       color:#fff;text-align:center;
     }
     .hero .wrap{max-width:980px;margin:0 auto;padding:40px 20px}
